添加NuGet包缓存,部分代码优化

--- a/ArknightsResources.Controls.Uwp.csproj
+++ b/ArknightsResources.Controls.Uwp.csproj
@@ -13,6 +13,7 @@
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
     <PackageIcon>icon.png</PackageIcon>
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
