--- a/ArknightsResources.Controls.Uwp/ArknightsResources.Controls.Uwp.csproj
+++ b/ArknightsResources.Controls.Uwp/ArknightsResources.Controls.Uwp.csproj
@@ -14,6 +14,9 @@
     <PackageIcon>icon.png</PackageIcon>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <DebugType>embedded</DebugType>
+    <Version>0.1.0.0-alpha</Version>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
