--- a/ArknightsResources.Controls.Uwp/ArknightsResources.Controls.Uwp.csproj
+++ b/ArknightsResources.Controls.Uwp/ArknightsResources.Controls.Uwp.csproj
@@ -7,6 +7,7 @@
     <Copyright>Copyright (c) 2022 Baka632</Copyright>
     <Description>Provides UWP controls about Arknights.</Description>
     <PackageProjectUrl>https://github.com/Baka632/ArknightsResources</PackageProjectUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <PackageTags>Arknights;明日方舟</PackageTags>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -41,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ArknightsResources.Stories.Models" Version="0.1.0-alpha" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -56,12 +58,5 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-
-  <ItemGroup>
-      <ProjectReference Include="..\..\ArknightsResources.Stories.Models\ArknightsResources.Stories.Models.csproj" />
-      <ProjectReference Include="..\..\ArknightsResources.CustomResourceHelpers\ArknightsResources.CustomResourceHelpers.csproj" />
-  </ItemGroup>
-    
-    
+  </ItemGroup>    
 </Project>
